# books-database-service

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  LINTING.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  server.py  test.db
data/: books.db
fastapi_demo/: auth.py  database.py  dependencies.py  dtos.py  email.py  email_service.py  main.py  models.py  recommendation_engine.py  scheduler.py  security.py  tasks.py  time.py  utils.py
robot_results/: log.html  output.xml  playwright-log.txt  report.html
robot_tests/: book_crud.robot  books_ui.robot  comments_e2e.robot  comments_ui.robot  responsive_and_edge_cases.robot  test_books_deletion.robot
scripts/: generate_books.py  migrate_db.py  run_lint.sh  run_robot_tests.sh
tests/: DEV-101_generated_tests.robot  DEV-104_generated_tests.robot  DEV-110_generated_tests.robot  DEV-113_generated_tests.robot  DEV-120_generated_tests.robot  DEV-122_generated_tests.robot  DEV-125_generated_tests.robot  DEV-128_generated_tests.robot  DEV-133_generated_tests.robot  DEV-136_generated_tests.robot  DEV-50_generated_tests.robot  DEV-53_generated_tests.robot  DEV-57_generated_tests.robot  DEV-65_generated_tests.robot  DEV-69_generated_tests.robot  DEV-74_generated_tests.robot  DEV-83_generated_tests.robot  DEV-86_generated_tests.robot  DEV-89_generated_tests.robot  DEV-93_generated_tests.robot  DEV-95_generated_tests.robot  DEV-98_generated_tests.robot  GEN-63_generated_tests.robot  GENAI-101_generated_tests.robot  GENAI-105_generated_tests.robot  GENAI-108_generated_tests.robot  (+84 more)
(+40 files in other folders)
