[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["Alex Jantunen <alex.jantunen@eficode.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
dev-server = "server:main"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
pydantic = "^2.6.4"
SQLAlchemy = "^2.0.29"
uvicorn = "^0.29.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
robotframework = "^6.1.1"
robotframework-browser = "^17.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
